Updated add.js to App.js and fixed target for both platforms in package.json

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<button type="button" class="btnStop">Stop</button>
 		<!-- <div>Run: <span class="runsCounter"></span></div> -->
 	</div>
-	<script src="add.js"></script>
+	<script src="App.js"></script>
 </body>
 
 </html>
